@startuml
class User {
    id: Integer
    username: String
    email: String
    password: String
    phonenumber: String
    user_type: String
    is_admin: Boolean
    date_created: DateTime
    date_updated: DateTime
    id_start: String
}
class SoilData {
    id: Integer
    district_id: Integer
    internal_id: Integer
    device: String
    owner: String
    nitrogen: Float
    phosphorus: Float
    potassium: Float
    ph: Float
    temperature: Float
    humidity: Float
    conductivity: Float
    signal_level: Float
    date: Date
    date_created: DateTime
    date_updated: DateTime
    modified_by: Integer
    created_by: Integer
}
class Farm {
    id: Integer
    farm_id: String
    name: String
    subcounty: String
    farmergroup_id: Integer
    district_id: Integer
    geolocation: String
    phonenumber: String
    phonenumber2: String
    cin: String
    gender: String
    date_created: DateTime
    date_updated: DateTime
    modified_by: Integer
    created_by: Integer
}
class FarmData {
    id: Integer
    farm_id: String
    crop_id: Integer
    land_type: String
    tilled_land_size: Float
    planting_date: Date
    season: Integer
    quality: String
    quantity: Integer
    harvest_date: Date
    expected_yield: Float
    actual_yield: Float
    timestamp: DateTime
    channel_partner: String
    destination_country: String
    customer_name: String
    date_created: DateTime
    date_updated: DateTime
    modified_by: Integer
    created_by: Integer
    number_of_tree: Integer
    hs_code: String
}
class Forest {
    id: Integer
    name: String
    tree_type: String
    date_created: DateTime
    date_updated: DateTime
    modified_by: Integer
    created_by: Integer
}
class Point {
    id: Integer
    longitude: Float
    latitude: Float
    owner_type: Enum(forest, farmer, tree)
    owner_id: String
    district_id: Integer
    date_created: DateTime
    date_updated: DateTime
    modified_by: Integer
    created_by: Integer
}
class Tree {
    id: Integer
    forest_id: Integer
    point_id: Integer
    name: String
    height: Float
    diameter: Float
    date_planted: Date
    date_cut: Date
    created_by: Integer
    modified_by: Integer
    date_created: DateTime
    date_updated: DateTime
    type: String
}
class Weather {
    id: Integer
    latitude: Float
    longitude: Float
    timestamp: DateTime
    air_temperature: Float
    air_temperature_80m: Float
    air_temperature_100m: Float
    air_temperature_1000hpa: Float
    air_temperature_800hpa: Float
    air_temperature_500hpa: Float
    air_temperature_200hpa: Float
    pressure: Float
    cloud_cover: Float
    current_direction: Float
    current_speed: Float
    gust: Float
    humidity: Float
    ice_cover: Float
    precipitation: Float
    snow_depth: Float
    sea_level: Float
    swell_direction: Float
    swell_height: Float
    swell_period: Float
    secondary_swell_direction: Float
    secondary_swell_height: Float
    secondary_swell_period: Float
    visibility: Float
    water_temperature: Float
}
User --> SoilData : created
User --> Farm : created
User --> FarmData : created
User --> Forest : created
User --> Point : created
User --> Tree : created
User --> Weather : created
Farm --> FarmData : has
Forest --> Tree : has
Point --> Tree : has
@enduml